--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <!-- Structure for keys -->
     <div class="keys">
         <div class="pos"> 
-            <span id="s1"><b>BE YOUR OWN MC</b></span>
+            <span id="s1"><b>BE YOUR OWN MC</b></span><br>
+            <span id="s1"><b>MADE BY <span style="color:red">AJ</span> WITH <span style="color:red">❤</span></b></span><br>
         </div>
         <div class="pos3">
             <div id="bars">
